fix: close icon sometimes appearing off centre

--- a/view/styling.css
+++ b/view/styling.css
@@ -60,37 +60,23 @@
 }
 
 #click-and-roll-dismiss {
-  background: white;
-  border: solid 1px white;
+  background: teal;
+  border: none;
   border-radius: 50%;
-  height: 14px;
-  opacity: 0.5;
-  position: absolute;
-  right: 8px;
-  top: 12px;
-  width: 14px;
+  color: white;
+  height: 20px;
+  margin: 8px;
+  opacity: 0.3;
+  padding: 0;
+  width: 20px;
+}
+
+#click-and-roll-dismiss > * {
+  pointer-events: none;
 }
 
 #click-and-roll-dismiss:hover {
   opacity: 1;
-}
-
-#click-and-roll-dismiss:before, #click-and-roll-dismiss:after {
-  background: teal;
-  content: ' ';
-  height: 10px;
-  left: 6px;
-  position: absolute;
-  top: 2px;
-  width: 2px;
-}
-
-#click-and-roll-dismiss:before {
-  transform: rotate(45deg);
-}
-
-#click-and-roll-dismiss:after {
-  transform: rotate(-45deg);
 }
 
 #click-and-roll-player-profile {
